tests/paczka1/fuzzy1/59035780.err
Error in line 2: 939 426 47,3
Error in line 1: QkGukWwd S939 49,5
Error in line 7: 2It S426 36,3
Error in line 5: OHIbNuA S426 25,7
Error in line 4: S939 S426 117,3
Error in line 17: OHIbNuA A326 882,5
Error in line 15: S939 S804 80,7
Error in line 27: QkGukWwd A326 2,8
